# eo-maxar-example

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  main.py  maxar_example.ipynb  noxfile.py  pyproject.toml
.github/.linters/: .mypy.ini
.github/linters/: .mypy.ini
dockerfiles/: Dockerfile.browser  browser_config.js
eo_maxar/: __init__.py  client.py  collection.py  config.py  constants.py  geojson.py  loader.py  models.py  util.py  visualiser.py
notebooks/: maxar_example.ipynb
tests/: conftest.py  test_client.py  test_collection.py  test_geojson.py  test_loader.py  test_models.py  test_visualiser.py
